# PowerpointComponents

./: .gitignore  README.md  mkdocs.yml  narrative_helper_test.pptx  narrative_test.pptx  pyproject.toml  requirements.txt  scatter_test.pptx  test_new_components.pptx  test_new_components.py  theme_cascade_smoke.pptx
.github/agents/: component-analyst.agent.md  component-implementation-engineer.agent.md  component-interface-architect.agent.md  design-outcome-vet.agent.md  documentation-handoff.agent.md  pptx-component-designer.agent.md  product-manager.agent.md  scrum-master.agent.md  uiux.agent.md
.github/prompts/: feature-triage.prompt.md
.github/workflows/: ci.yml  docs.yml
docs/: hooks.py  index.md
docs/components/: PATTERNS.md  README.md  REFERENCE.md  chart.md  guide.md  guide_slide_master.md  slide_master.md  text_box.md  visual_gallery.md
docs/stylesheets/: extra.css
examples/: brand_template_config.json  brand_template_dark.json  brand_template_dark.pptx  brand_template_light.json  brand_template_light.pptx  brand_template_test.pptx  brand_template_test.py  demo.py  demo_dark.pptx  demo_light.pptx  image_strip_overlay.py  situation_briefing.py  strict_layout_ci.py
examples/slidemasterdemo/: 6-hhp-iaf-pp-mtr-template_oct_2021.pptx  output.pptx  output2.pptx  slidemasterdemo.py
pptx_components/: __init__.py  base.py  delegation.py  export.py  layout.py  master_builder.py  reverse.py  slide_builder.py  theme.py  validation.py
pptx_components/components/: __init__.py  animation.py  annotation.py  (+32 more)
site/: 404.html  index.html  objects.inv  sitemap.xml
(+69 files in other folders)
